--- a/.env
+++ b/.env
@@ -1,18 +1,11 @@
-SECRET_KEY = 'django-insecure-8b_%(xsi$8&ez2ln!dqox15v@1^-81s5-7r8bpwbz%ln8p7$'
-#SECRET_KEY_2 =m"~fAFqAy[us"d*6+IR(g;aP)$}y4Q.~oz|a4RY;k'+-T.&n9{G<e#.+xs*0}oU
-IP_MONGODB_POST='http://172.16.50.102:4000/comment'
-IP_MONGODB_STORY='http://172.16.50.102:4001/history'
-IP_CHAT='http://172.16.50.102:5030'
-IP_CHAT_GROUP='http://172.16.50.40:5050'
-IP_CALLS='http://172.16.50.38:5030' 
+ENVIRONMENT = development
+SECRET_KEY = django-insecure-8b_%(xsi$8&ez2ln!dqox15v@1^-81s5-7r8bpwbz%ln8p7$
 
-IP_GLOOV_LOGIN='http://172.16.50.32:8000'
-IP_GRAPHQL_MARIADB='http://172.16.50.42:5001'
-IP_GRAPHQL_MONGODB='http://172.16.50.42:5000'
+IP_REDIS=localhost
+PORT_REDIS=6379
 
-IP_MARIADB_PROFILE='http://172.16.50.103:8005/profile'
-IP_MARIADB_ARCHIVED='http://172.16.50.103:8004/archived/'
-IP_MARIADB_NOTIFICATION='http://172.16.50.38:8003/notifications'
-IP_MARIADB_STATISTICS='http://172.16.50.103:8000/statistics'
-IP_MARIADB_TRANSACTIONS='http://172.16.50.103:8002/transactions'
-IP_MARIADB_REPORT='http://172.16.50.101:8006/report'
+IP_USERS='http://127.0.0.1:5001'
+IP_LICENSES='http://127.0.0.1:5002/licenses'
+IP_ORDERS='http://127.0.0.1:5003/orders'
+IP_UPLOAD_FILES='http://127.0.0.1:5004/files'
+IP_NOTIFICATIONS='http://127.0.0.1:5005/notification' 
