--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,16 @@ starlette-testclient
 pytest
 redis[hiredis]
 pyjwt
+
+opentelemetry-exporter-jaeger
+opentelemetry-distro
+
+opentelemetry-api 
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-django
+opentelemetry-instrumentation-celery
+
+gunicorn==20.1.0
+psutil
+asgi-background
