--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 
 version: "3.9"
 services:    
-    encargos:        
+    graphql:        
         build: .
         ports:
-            - "5003:5003"
+            - "5000:5000"
         links: 
             - mongodb             
     mongodb:        
